--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "node": ">= 0.10.0"
   },
   "dependencies": {
-    "jquery": "^3.7.1"
+    "jquery": "^3.7.1",
+    "package.json": "^0.0.0"
   },
   "devDependencies": {
     "onchange": "^7.1.0",
