--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "package.json": "^0.0.0"
   },
   "devDependencies": {
+    "bootstrap": "^5.3.0",
     "onchange": "^7.1.0",
     "uglify-js": "^3.17.4"
   },
