Update about and news with corrected text and grammar

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -5,13 +5,13 @@
   text: "I started a research stay at [CVLab, EPFL](https://www.epfl.ch/labs/cvlab/) with [Prof. Pascal Fua](https://people.epfl.ch/pascal.fua)."
 
 - date: 2023-10-08
-  text: "I'll be presenting our paper [LightNeuS](/publications/lightneus) at [MICCAI 2023](https://conferences.miccai.org/2023/) in Vancouver."
+  text: "I'll present our paper [LightNeuS](/publications/lightneus) at [MICCAI 2023](https://conferences.miccai.org/2023/) in Vancouver."
 
 - date: 2023-10-02
-  text: "We arrived at Paris to present [LightDepth](/publications/lightdepth) at [ICCV 2023](http://iccv2023.thecvf.com/)."
+  text: "We arrived in Paris to present [LightDepth](/publications/lightdepth) at [ICCV 2023](http://iccv2023.thecvf.com/)."
 
 - date: 2023-06-26
-  text: "I joined Apple Vision Pro team as a CV/ML Research Intern."
+  text: "I joined the Apple Vision Pro team as a CV/ML Research Intern."
 
 - date: 2022-10-23
   text: "I'm attending [IROS 2022](https://iros2022.org/) in Kyoto to present our [paper](/publications/photometric)."
