Add talks section

--- a/_data/research.yml
+++ b/_data/research.yml
@@ -3,35 +3,35 @@
   location: Lausanne, Switzerland
   start_date: 01/05/2024
   end_date: 31/10/2024
-  image: /images/research_epfl.png
+  image: research_epfl.png
 
 - type: secondment
   company: Apple Inc.
   location: Sunnyvale, California, US
   start_date: 26/06/2023
   end_date: 29/09/2023
-  image: /images/research_apple.gif
+  image: research_apple.gif
 
 - type: project
   name: 'EndoMapper: Real-time mapping from endoscopic video'
   description: 'Team member. Horizon 2020 FET Open. [Project website](https://sites.google.com/unizar.es/endomapper/home).'
   start_date: 01/03/2021
   end_date: 31/11/2024
-  image: /images/research_europe.gif
+  image: research_europe.gif
 
 - type: grant
   name: 'FPU Grant'
   description: 'PhD thesis. Competitive research grant. Spain.'
   start_date: 01/12/2021
   end_date: 30/11/2025
-  image: /images/research_spain.gif
+  image: research_spain.gif
 
 - type: grant
   name: 'Beca de colaboración'
   description: 'Bachelor&#39;s thesis. Competitive research grant. Spain.'
   start_date: 01/09/2019
   end_date: 30/06/2020
-  image: /images/research_spain.gif
+  image: research_spain.gif
 
 - type: patent
   number: EP23382614.8
