--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ author:
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
-future                   : false
+future                   : true
 read_more                : "disabled" # if enabled, adds "Read more" links to excerpts
 talkmap_link             : false #change to true to add link to talkmap on talks page
 comments:
@@ -197,7 +197,6 @@ exclude:
   - _pages/portfolio.html
   - _pages/tag-archive.html
   - _pages/talkmap.html
-  - _pages/talks.html
   - _pages/terms.md
   - _pages/year-archive.html
 keep_files:
@@ -235,6 +234,9 @@ collections:
   publications:
     output: true
     permalink: /:collection/:title/
+  talks:
+    output: true
+    permalink: /:collection/:title/
 
 # Defaults
 defaults:
@@ -264,6 +266,14 @@ defaults:
       share: true
       comments: false
       max-buttons: 5
+  # _talks
+  - scope:
+      path: ""
+      type: talks
+    values:
+      layout: talk
+      author_profile: true
+      share: true
 
 
 # Sass/SCSS
