Add EndoMetric paper

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -68,3 +68,13 @@ rmcantin:
   twitter      : "rmcantin"
   orcid        : "0000-0002-6741-844X"
   googlescholar: "qFjif58AAAAJ"
+
+riranzo:
+  name         : "Iranzo, Raúl"
+  uri          : 
+  email        : 
+  bio          : 
+  avatar       :
+  twitter      : 
+  orcid        : 
+  googlescholar: 
