Update papers and MSc thesis

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -76,5 +76,5 @@ riranzo:
   bio          : 
   avatar       :
   twitter      : 
-  orcid        : 
+  orcid        : "0009-0000-6726-923X"
   googlescholar: 
