Update EndoMetric publication

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,7 +1,7 @@
 # Authors
 
 vmbatlle:
-  name         : "Batlle, Víctor M"
+  name         : "Batlle, Víctor M."
   uri          : "http://vmbatlle.github.io"
   email        : 
   bio          : 
@@ -11,7 +11,7 @@ vmbatlle:
   googlescholar: "a0yLLFYAAAAJ"
 
 tardos:
-  name         : "Tardós, Juan D"
+  name         : "Tardós, Juan D."
   uri          : "https://webdiis.unizar.es/~jdtardos/"
   email        : 
   bio          : 
@@ -21,7 +21,7 @@ tardos:
   googlescholar: "TVf1gw0AAAAJ"
 
 josemari:
-  name         : "Montiel, José MM"
+  name         : "Montiel, José M.M."
   uri          : "https://webdiis.unizar.es/~josemari/"
   email        : 
   bio          : 
